# genpact-university-agent

./: .env.example  .gitignore  DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
evals/: README.md  __init__.py  build_fixture.py  capture_traces.py  cases.py  fixture.sql  leaderboard.md  run_eval.py
src/university_agent/: README.md  __init__.py  graph.py  llm.py  mcp_gateway.py  nodes.py  state.py  university_db_mcp_gateway.py
src/university_cli/: README.md  __init__.py  app.py
src/university_db/: README.md  __init__.py  access.py  directory.py  engine.py  init_db.py  models.py  roles.py  schema.py  seed.py
src/university_db/ddl/: schema.sql
src/university_db_mcp/: README.md  __init__.py  server.py  service.py  validation.py
src/university_web/: README.md  __init__.py  agent_runner.py  app.py  data.py  launcher.py  traces.py
tests/: test_smoke.py
tests/test_agent/: test_graph.py  test_llm.py  test_nodes.py
tests/test_cli/: test_app.py
tests/test_db/: test_access.py  test_directory.py  test_engine.py  test_init_db.py  test_schema.py  test_seed.py
tests/test_e2e/: test_end_to_end.py
tests/test_mcp/: test_service.py  test_validation.py
traces/: admin_top_teacher.json  student_avg_grade.json  teacher_distinct_students.json
traces/langsmith/: admin_top_teacher.json  student_avg_grade.json  teacher_distinct_students.json
